# mfcc-rust

./: .gitignore  Cargo.toml  Contributing.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: general-issue.md
py-speechsauce/: Cargo.toml  pyproject.toml
py-speechsauce/speechsauce/: __init__.py
py-speechsauce/src/: lib.rs
py-speechsauce/test/: test_speechsauce.py
speechsauce/: Cargo.toml
speechsauce/src/: builder.rs  config.rs  feature.rs  functions.rs  lib.rs  processing.rs  util.rs
speechsauce/tests/: stft_test.rs
src/: feature.rs  functions.rs  lib.rs  processing.rs  util.rs
src/speechpy/: feature.py  functions.py  processing.py
