[package]
name = "speechsauce-py"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "speechsauce"
crate-type = ["cdylib"]

[dependencies]
ndarray="^0.15"
pyo3 = {version= "0.16.5", features=["extension-module","abi3-py37"]}
numpy = "0.16.2"
speechsauce = { path = "../speechsauce" }



