[package]
name = "speechsauce-py"
version = "0.1.01"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "speechsauce_python"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "speechsauce._internal"

[dependencies]
ndarray="^0.15"
pyo3 = {version= "0.19.0", features=["extension-module","abi3-py37"]}
numpy = "0.19.0"
cached = "0.44.0"
speechsauce = { path = "../speechsauce" }



