[package]
name = "speechsauce"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray="^0.15"
ndrustfft = "^0.3"
num-traits = "0.2.15"
#stft = {git="https://github.com/toastmod/stft.git",branch="master"}
#apodise

[dev-dependencies]
ndarray={version="^0.15",features=["approx"]}
ndarray-rand = "0.14.0"



