[package]
name = "speechsauce"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray="^0.15"
ndrustfft = "0.4.0"
num-traits = "0.2.15"
num-complex = "0.4.3"
itertools="0.10.5"
realfft = "3.2.0"
einsum-derive = "0.1"
cached = "0.44.0"
#stft = {git="https://github.com/toastmod/stft.git",branch="master"}
#apodise

[dev-dependencies]
ndarray={version="^0.15",features=["approx"]}
ndarray-rand = "0.14.0"



